--- a/final/main.css
+++ b/final/main.css
@@ -5,6 +5,10 @@ body {
     margin: 0 auto;
     color: darkgray;
     padding: 0 auto;
+    background: -webkit-linear-gradient(left top, #65AEC8, #326CBC);
+    background: -o-linear-gradient(bottom right, #65AEC8, #326CBC);
+    background: -moz-linear-gradient(bottom right, #65AEC8, #326CBC);
+    background: linear-gradient(to bottom right, #65AEC8, #326CBC);
 }
 
 header {
@@ -12,7 +16,8 @@ header {
     width: 100%;
     padding: 20px;
     color: black;
-    border-bottom: .5px solid darkgray;
+    border-bottom: .5px solid #E8EDF3;
+    background: #ffffff;
 }
 
 #logo {
@@ -25,39 +30,48 @@ header {
 div {
     margin: 0 auto;
     width: 500px;
-    padding-top: 3em;
+    height: 20em;
+    margin-top: 7em;
+    border: .5px #E8EDF3;
+    padding: 10px;
+    background: #ffffff;
+    box-shadow: 10px 10px 5px #3C4958;
 }
+
+/* text box */
 
 input {
     width: 79%;
     border: 2px solid #439CBC;
-    height: 40px;
     font-size: 20px;
     padding: 0;
     margin: 0;
     font-family: 'Avenir Next', sans-serif;
-    background: #76B7CE;
+    background: #65AEC8;
+    display: inline-block;
+    height: 15%;
 }
 
 button {
     width: 19%;
     font-family: 'Avenir Next', sans-serif;
-    background-color: #76B7CE;
+    background-color: #65AEC8;
     display: inline-block;
     text-align: center;
     color: #FFFFFF;
-    height: 40px;
     border: 2px solid #439CBC;
-    font-size: 13px;
+    font-size: 14px;
     letter-spacing: 1px;
+    height: 15%;
 }
 
-textarea {
+/* response area */
+
+p {
     width: 100%;
-    height: 7em;
+    height: 82%;
     resize: none;
     overflow: auto;
-    border: none;
-    background: darkblue;
+    border: 1px solid #E8EDF3;
     margin-top: 5px;
 }
